# LeagueGameReader

./: .clang-format  .gitignore  CMakeLists.txt  README.md  binding.gyp  swig.bat  swig.i
bind/: LeagueGameReader.py
inc/: league_gamereader.hpp
inc/league_gamereader/: game_object.hpp  game_object_manager.hpp  general_items.hpp  library.hpp
offsets/: 13.21.539.4823.json  13.22.541.9804.json  13.23.544.5515.json  13.24.546.6062.json  13.24.547.9214.json
src/: example.cpp  game_reader.cpp  game_reader.hpp  js_swig.cpp  json.hpp  library.cpp  process.cpp  process.hpp  py_swig.cpp  settings.cpp  settings.hpp
swig/: CMakeLists.txt  swig.i
swig/nodejs/: CMakeLists.txt
swig/python/: CMakeLists.txt
